doc/softx86_source_code/include/softx86.h


typedef unsigned char				sx86_ubyte;

typedef unsigned short int			sx86_uword;

typedef signed short int			sx86_sword;

typedef unsigned int				sx86_udword;

typedef signed int				sx86_sdword;

typedef unsigned long long int			sx86_uldword;

typedef unsigned char				sx86_ubyte;

typedef unsigned short int			sx86_uword;

typedef signed short int			sx86_sword;

typedef unsigned int				sx86_udword;

typedef signed int				sx86_sdword;

typedef unsigned __int64			sx86_uldword;

typedef unsigned char				sx86_ubyte;

typedef unsigned short int			sx86_uword;

typedef signed short int			sx86_sword;

typedef unsigned int				sx86_udword;

typedef signed int				sx86_sdword;

typedef unsigned long long int			sx86_uldword;


/*=====================================================================================
   Softx86 context structure

   This structure is used to interact with the host application.
*/
typedef struct {
// version
	sx86_ubyte			version_hi;
	sx86_ubyte			version_lo;
	sx86_uword			version_sublo;
// other
	softx86_cpustate		state;
	softx86_callbacks		callbacks;
	softx86_bugs			bugs;
	void*				opcode_table;
	sx86_udword			addr_mask;		// used to limit addressing based on CPU level
	int				mem_addr_align;		// alignment used
	sx86_udword			mem_addr_mask;		// mask from alignment
	int				level;			// which CPU are we emulating?
	sx86_ubyte*			ptr_regs_8reg[8];	// pointer table to 8-bit regs given reg value in opcode
	sx86_ubyte			is_segment_override;	// set if a segment override was encountered
	sx86_uword			segment_override;	// segment override
	sx86_ubyte			rep_flag;		// 0=no REP loop, 1=REPNZ, 2=REPZ
	void*				ref_softx87_ctx;	// link to context structure of softx87
} softx86_ctx;


/* CPU emulation levels */
#define SX86_CPULEVEL_8088		0			// 8088
#define SX86_CPULEVEL_8086		1			// 8086
#define SX86_CPULEVEL_80186		2			// 80186
#define SX86_CPULEVEL_80286		3			// 80286

void sx86_exec_full_modregrm_rw(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,sx86_ubyte opswap,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src,sx86_ubyte val),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src,sx86_udword val));

void sx86_exec_full_modregrm_ro(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,sx86_ubyte opswap,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src,sx86_ubyte val),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src,sx86_udword val));

void sx86_exec_full_modsregrm_rw(softx86_ctx* ctx,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,sx86_ubyte opswap,sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val));

void sx86_exec_full_modrmonly_rw(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src));

void sx86_exec_full_modrmonly_rw_imm(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src,sx86_ubyte val),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src,sx86_udword val));

void sx86_exec_full_modrmonly_rw_imm8(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src,sx86_ubyte val),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src,sx86_udword val));

void sx86_exec_full_modrmonly_ro_imm(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src,sx86_ubyte val),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src,sx86_uword val),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src,sx86_udword val));

void sx86_exec_full_modregrm_xchg(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm);

void sx86_exec_full_modregrm_lea(softx86_ctx* ctx,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm);

void sx86_exec_full_modrmonly_memx(softx86_ctx* ctx,sx86_ubyte mod,sx86_ubyte rm,int sz,void (*op64)(softx86_ctx* ctx,char *datz,int sz));

void sx86_exec_full_modrmonly_callfar(softx86_ctx* ctx,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,void (*op16)(softx86_ctx* ctx,sx86_uword seg,sx86_uword ofs),void (*op32)(softx86_ctx* ctx,sx86_udword seg,sx86_udword ofs));

void sx86_exec_full_modrmonly_ro(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx,sx86_ubyte src),sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword src),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword src));

void sx86_exec_full_modrmonly_wo(softx86_ctx* ctx,sx86_ubyte w16,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte rm,sx86_ubyte (*op8)(softx86_ctx* ctx),sx86_uword (*op16)(softx86_ctx* ctx),sx86_udword (*op32)(softx86_ctx* ctx));

void sx86_exec_full_modregrm_far(softx86_ctx* ctx,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,sx86_uword (*op16)(softx86_ctx* ctx,sx86_uword seg,sx86_uword ofs),sx86_udword (*op32)(softx86_ctx* ctx,sx86_udword seg,sx86_udword ofs));

void sx86_exec_full_modregrm_far_ro3(softx86_ctx* ctx,sx86_ubyte d32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,sx86_sword (*op16)(softx86_ctx* ctx,sx86_sword idx,sx86_sword upper,sx86_sword lower),sx86_sdword (*op32)(softx86_ctx* ctx,sx86_sdword idx,sx86_sdword upper,sx86_sdword lower));


void sx86_dec_full_modrmonly(softx86_ctx* ctx,sx86_ubyte is_word,sx86_ubyte dat32,sx86_ubyte mod,sx86_ubyte rm,char* op1);

void sx86_dec_full_modregrm(softx86_ctx* cpu,sx86_ubyte is_word,sx86_ubyte dat32,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,char* op1,char* op2);

void sx86_dec_full_modsregrm(softx86_ctx* cpu,sx86_ubyte mod,sx86_ubyte reg,sx86_ubyte rm,char* op1,char* op2);


void softx86_bswap2(sx86_ubyte *x);

void softx86_bswap4(sx86_ubyte *x);

/* API */
int softx86_getversion(int *major,int *minor,int *subminor);

int softx86_init(softx86_ctx* ctx,int level);

int softx86_reset(softx86_ctx* ctx);

int softx86_free(softx86_ctx* ctx);

int softx86_step(softx86_ctx* ctx);

int softx86_decompile(softx86_ctx* ctx,char asmbuf[256]);

int softx86_decompile_exec_cs_ip(softx86_ctx* ctx);

/* API for stack */
sx86_uword softx86_stack_popw(softx86_ctx* ctx);

void softx86_stack_discard_n(softx86_ctx* ctx,int bytez);

void softx86_stack_add_n(softx86_ctx* ctx,int bytez);

void softx86_stack_pushw(softx86_ctx* ctx,sx86_uword data);

/* API for CPU itself in terms of fetching data properly */
int softx86_fetch(softx86_ctx* ctx,void *reserved,sx86_udword addr,void *buf,int sz);

int softx86_write(softx86_ctx* ctx,void *reserved,sx86_udword addr,void *buf,int sz);

sx86_ubyte softx86_fetch_exec_byte(softx86_ctx* ctx);

sx86_ubyte softx86_fetch_dec_byte(softx86_ctx* ctx);

/* API for setting segment register values */
int softx86_setsegval(softx86_ctx* ctx,int sreg_id,sx86_udword x);

/* API for setting important pointers (NOTE: use these instead of directly
 * modifying the register values please, as it will make future development
 * of instruction queues, caches, and pipelines much easier to manage in
 * terms of CS:IP and SS:SP) */
int softx86_set_instruction_ptr(softx86_ctx* ctx,sx86_udword cs,sx86_udword ip);

int softx86_set_instruction_dec_ptr(softx86_ctx* ctx,sx86_udword cs,sx86_udword ip);

int softx86_set_stack_ptr(softx86_ctx* ctx,sx86_udword ss,sx86_udword sp);

int softx86_set_near_instruction_ptr(softx86_ctx* ctx,sx86_udword ip);

/* get an interrupt vector */
int softx86_get_intvect(softx86_ctx* ctx,sx86_ubyte i,sx86_uword *seg,sx86_uword *ofs);

/* save instruction pointer on stack, get int vector, set instruction pointer there */
void softx86_go_int_frame(softx86_ctx* ctx,sx86_ubyte i);


/* mask constants for CPU flags */
#define SX86_CPUFLAG_CARRY		0x00000001
#define SX86_CPUFLAG_RESERVED_01	0x00000002
#define SX86_CPUFLAG_PARITY		0x00000004
#define SX86_CPUFLAG_RESERVED_03	0x00000008
#define SX86_CPUFLAG_AUX		0x00000010
#define SX86_CPUFLAG_RESERVED_05	0x00000020
#define SX86_CPUFLAG_ZERO		0x00000040
#define SX86_CPUFLAG_SIGN		0x00000080
#define SX86_CPUFLAG_TRAP		0x00000100
#define SX86_CPUFLAG_INTENABLE		0x00000200
#define SX86_CPUFLAG_DIRECTIONREV	0x00000400
#define SX86_CPUFLAG_OVERFLOW		0x00000800
#define SX86_CPUFLAG_IOPL		0x00003000
#define SX86_CPUFLAG_NESTEDTASK		0x00004000
#define SX86_CPUFLAG_RESERVED_15	0x00008000
#define SX86_CPUFLAG_RESUME		0x00010000
#define SX86_CPUFLAG_V86		0x00020000
#define SX86_CPUFLAG_ALIGNMENTCHK	0x00040000
#define SX86_CPUFLAG_RESERVED_19	0x00080000
#define SX86_CPUFLAG_RESERVED_20	0x00100000
#define SX86_CPUFLAG_RESERVED_21	0x00200000
#define SX86_CPUFLAG_RESERVED_22	0x00400000
#define SX86_CPUFLAG_RESERVED_23	0x00800000
#define SX86_CPUFLAG_RESERVED_24	0x01000000
#define SX86_CPUFLAG_RESERVED_25	0x02000000
#define SX86_CPUFLAG_RESERVED_26	0x04000000
#define SX86_CPUFLAG_RESERVED_27	0x08000000
#define SX86_CPUFLAG_RESERVED_28	0x10000000
#define SX86_CPUFLAG_RESERVED_29	0x20000000
#define SX86_CPUFLAG_RESERVED_30	0x40000000
#define SX86_CPUFLAG_RESERVED_31	0x80000000

#define SX86_CPUFLAGBO_CARRY		0
#define SX86_CPUFLAGBO_RESERVED_01	1
#define SX86_CPUFLAGBO_PARITY		2
#define SX86_CPUFLAGBO_RESERVED_03	3
#define SX86_CPUFLAGBO_AUX		4
#define SX86_CPUFLAGBO_RESERVED_05	5
#define SX86_CPUFLAGBO_ZERO		6
#define SX86_CPUFLAGBO_SIGN		7
#define SX86_CPUFLAGBO_TRAP		8
#define SX86_CPUFLAGBO_INTENABLE	9
#define SX86_CPUFLAGBO_DIRECTIONREV	10
#define SX86_CPUFLAGBO_OVERFLOW		11
#define SX86_CPUFLAGBO_IOPL		12
#define SX86_CPUFLAGBO_NESTEDTASK	14
#define SX86_CPUFLAGBO_RESERVED_15	15
#define SX86_CPUFLAGBO_RESUME		16
#define SX86_CPUFLAGBO_V86		17
#define SX86_CPUFLAGBO_ALIGNMENTCHK	18
#define SX86_CPUFLAGBO_RESERVED_19	19
#define SX86_CPUFLAGBO_RESERVED_20	20
#define SX86_CPUFLAGBO_RESERVED_21	21
#define SX86_CPUFLAGBO_RESERVED_22	22
#define SX86_CPUFLAGBO_RESERVED_23	23
#define SX86_CPUFLAGBO_RESERVED_24	24
#define SX86_CPUFLAGBO_RESERVED_25	25
#define SX86_CPUFLAGBO_RESERVED_26	26
#define SX86_CPUFLAGBO_RESERVED_27	27
#define SX86_CPUFLAGBO_RESERVED_28	28
#define SX86_CPUFLAGBO_RESERVED_29	29
#define SX86_CPUFLAGBO_RESERVED_30	30
#define SX86_CPUFLAGBO_RESERVED_31	31

/* default callback functions within the library */
void softx86_step_def_on_read_memory(void* _ctx,sx86_udword address,sx86_ubyte *buf,int size);

void softx86_step_def_on_read_io(void* _ctx,sx86_udword address,sx86_ubyte *buf,int size);

void softx86_step_def_on_write_memory(void* _ctx,sx86_udword address,sx86_ubyte *buf,int size);

void softx86_step_def_on_write_io(void* _ctx,sx86_udword address,sx86_ubyte *buf,int size);

void softx86_step_def_on_hw_int(void* _ctx,sx86_ubyte i);

void softx86_step_def_on_sw_int(void* _ctx,sx86_ubyte i);

void softx86_step_def_on_hw_int_ack(void* _ctx,sx86_ubyte i);

void softx86_step_def_on_idle_cycle(void* _ctx);

void softx86_step_def_on_nmi_int(void* _ctx);

void softx86_step_def_on_nmi_int_ack(void* _ctx);

int  softx86_step_def_on_fpu_opcode_exec(void* _ctx86,void* _ctx87,sx86_ubyte opcode);

int  softx86_step_def_on_fpu_opcode_dec(void* _ctx86,void* _ctx87,sx86_ubyte opcode,char buf[128]);

void softx86_step_def_on_reset(void* _ctx);


/* external/internal/NMI interrupt generation and acknowledgement */
int softx86_ext_hw_signal(softx86_ctx* ctx,sx86_ubyte i);

int softx86_ext_hw_ack(softx86_ctx* ctx);

int softx86_int_sw_signal(softx86_ctx* ctx,sx86_ubyte i);

int softx86_ext_hw_nmi_signal(softx86_ctx* ctx);

int softx86_ext_hw_nmi_ack(softx86_ctx* ctx);


/* parity flag computation routines */
int softx86_parity8(sx86_ubyte ret);

int softx86_parity16(sx86_uword ret);

int softx86_parity32(sx86_udword ret);

int softx86_parity64(sx86_uldword ret);


/* bug emulation constants. each is meant to be unique. */
#define SX86_BUG_PREEMPTIBLE_AFTER_PREFIX	0x12340500
#define SX86_BUG_SP_DECREMENT_BEFORE_STORE	0x12340600	// specific to all prior to 286
#define SX86_BUG_5BIT_SHIFTMASK			0x12340700	// 286+ behavior of masking shift count to 5 bits

/* use this to change values in the bug emulation structure */
int softx86_setbug(softx86_ctx* ctx,sx86_udword bug_id,sx86_ubyte on_off);